-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This mostly looks harmless so I imagine we should just disable the option?
lustre_rsync.c: In function Б─≤lr_rsync_dataБ─≥:
lustre_rsync.c:316:55: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4085 [-Wformat-truncation=]
snprintf(cmd, PATH_MAX, "%s --inplace %s %s", rsync, info->src,
^~
lustre_rsync.c:316:17: note: Б─≤snprintfБ─≥ output 13 or more bytes (assuming 8205) into a destination of size 4096
snprintf(cmd, PATH_MAX, "%s --inplace %s %s", rsync, info->src
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->dest);
~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_cascade_moveБ─≥:
lustre_rsync.c:679:47: warning: Б─≤snprintfБ─≥ output may be truncated before the last format character [-Wformat-truncation=]
snprintf(d, PATH_MAX, "%s/%s", dest,
^~~~~~~
lustre_rsync.c:679:25: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4097) into a destination of size 4096
snprintf(d, PATH_MAX, "%s/%s", dest,
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
curr->pc_log.pcl_name);
~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_rm_recursiveБ─≥:
lustre_rsync.c:763:47: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4089 [-Wformat-truncation=]
snprintf(info->cmd, PATH_MAX, "rm -rf %s", info->dest);
^~
lustre_rsync.c:763:9: note: Б─≤snprintfБ─≥ output between 8 and 4104 bytes into a destination of size 4096
snprintf(info->cmd, PATH_MAX, "rm -rf %s", info->dest);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_createБ─≥:
lustre_rsync.c:822:51: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 255 bytes into a region of size between 0 and 4096 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s%s", info->path, info->name);
^~
lustre_rsync.c:822:17: note: Б─≤snprintfБ─≥ output between 1 and 4352 bytes into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s%s", info->path, info->name);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c:824:48: warning: Б─≤/Б─≥ directive output may be truncated writing 1 byte into a region of size between 0 and 4096 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s", info->path, info->name);
^~~~~~~
lustre_rsync.c:824:17: note: Б─≤snprintfБ─≥ output between 2 and 4353 bytes into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s", info->path, info->name;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c:837:38: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s", status->ls_targets[0],
^~
lustre_rsync.c:837:3: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4098) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s", status->ls_targets[0],
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->path);
~~~~~~~~~~~
lustre_rsync.c:847:52: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s",
^~
lustre_rsync.c:847:17: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4098) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no], info->savedpath);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_removeБ─≥:
lustre_rsync.c:886:52: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s/%s",
^~
lustre_rsync.c:886:17: note: Б─≤snprintfБ─≥ output 3 or more bytes (assuming 4354) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no], info->path,
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->name);
~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_moveБ─≥:
lustre_rsync.c:929:60: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s",
^~
lustre_rsync.c:929:25: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4098) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no],
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->path);
~~~~~~~~~~~
lustre_rsync.c:935:68: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s/%s",
^~
lustre_rsync.c:935:33: note: Б─≤snprintfБ─≥ output 3 or more bytes (assuming 4354) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no],
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->path, info->name);
~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_linkБ─≥:
lustre_rsync.c:1022:45: warning: Б─≤/Б─≥ directive output may be truncated writing 1 byte into a region of size between 0 and 4096 [-Wformat-truncation=]
snprintf(info->dest, sizeof(info->dest), "%s/%s/%s",
^~~~~~~~~~
lustre_rsync.c:1022:4: note: Б─≤snprintfБ─≥ output 3 or more bytes (assuming 4354) into a destination of size 4097
snprintf(info->dest, sizeof(info->dest), "%s/%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no],
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->path, info->name);
~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c:1042:43: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(srcpath, sizeof(srcpath), "%s/%s",
^~
lustre_rsync.c:1042:4: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4098) into a destination of size 4096
snprintf(srcpath, sizeof(srcpath), "%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no],
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
info->path);
~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_setattrБ─≥:
lustre_rsync.c:1096:52: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s",
^~
lustre_rsync.c:1096:17: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4098) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no], info->path);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_setxattrБ─≥:
lustre_rsync.c:1127:52: warning: Б─≤%sБ─≥ directive output may be truncated writing up to 4096 bytes into a region of size 4095 [-Wformat-truncation=]
snprintf(info->dest, PATH_MAX, "%s/%s",
^~
lustre_rsync.c:1127:17: note: Б─≤snprintfБ─≥ output 2 or more bytes (assuming 4098) into a destination of size 4096
snprintf(info->dest, PATH_MAX, "%s/%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_targets[info->target_no], info->path);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lustre_rsync.c: In function Б─≤lr_replicateБ─≥:
lustre_rsync.c:1509:68: warning: Б─≤%sБ─≥ directive output may be truncated writing 8 bytes into a region of size between 0 and 64 [-Wformat-truncation=]
snprintf(status->ls_mdt_device, LR_NAME_MAXLEN, "%s%s",
^~
lustre_rsync.c:1509:17: note: Б─≤snprintfБ─≥ output between 9 and 73 bytes into a destination of size 64
snprintf(status->ls_mdt_device, LR_NAME_MAXLEN, "%s%s",
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
status->ls_source_fs, DEFAULT_MDT);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- is related to
-
LU-9934 support gcc7
-
- Resolved
-